# django_boilerplate

./: pyproject.toml
base_templates/: home.html
project/: settings.py  urls.py
recipes/: urls.py  views.py
recipes/static/recipes/css/: style.css
recipes/templates/recipes/: contato.html  home.html
recipes/templates/recipes/pages/: home.html  recipe-view.html
recipes/templates/recipes/partials/: footer.html  head.html  header.html  recipe.html
